--- a/recom.ipynb
+++ b/recom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,15 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\dell\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3441: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+      "c:\\Users\\hites\\miniconda3\\envs\\movie-recom\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3186: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
    ],
@@ -32,22 +32,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(45466, 24)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(45466, 24)\n",
+      "Index(['adult', 'belongs_to_collection', 'budget', 'genres', 'homepage', 'id',\n",
+      "       'imdb_id', 'original_language', 'original_title', 'overview',\n",
+      "       'popularity', 'poster_path', 'production_companies',\n",
+      "       'production_countries', 'release_date', 'revenue', 'runtime',\n",
+      "       'spoken_languages', 'status', 'tagline', 'title', 'video',\n",
+      "       'vote_average', 'vote_count'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "source": [
-    "metadata.shape"
+    "print(metadata.shape)\n",
+    "print(metadata.columns)"
    ]
   },
   {
@@ -7285,7 +7290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AI",
+   "display_name": "movie-recom",
    "language": "python",
    "name": "python3"
   },
@@ -7299,11 +7304,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2.7.18 |Anaconda, Inc.| (default, Apr 23 2020, 17:26:54) [MSC v.1500 64 bit (AMD64)]"
+   "version": "3.7.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "56641beb7c32b8a0aefa7fd478209daad6f476a4aba62931ba1dbd44aff5177b"
+    "hash": "2ded1342dd748fe15666138b1dfe352b06a9fa2afcaf8224a95d73ef2e4e73c6"
    }
   }
  },
