--- a/recom.ipynb
+++ b/recom.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sklearn\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -7284,11 +7284,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "bcc88a5c2b6accdcaf39c87a931cb715cc1ab684beb32819a99a5a377f971b8d"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "AI",
    "language": "python",
    "name": "python3"
   },
@@ -7302,7 +7299,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "2.7.18 |Anaconda, Inc.| (default, Apr 23 2020, 17:26:54) [MSC v.1500 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "56641beb7c32b8a0aefa7fd478209daad6f476a4aba62931ba1dbd44aff5177b"
+   }
   }
  },
  "nbformat": 4,
