added flask app

--- a/recom.ipynb
+++ b/recom.ipynb
@@ -351,6 +351,15 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_movies.to_csv('q_movies.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -428,7 +437,7 @@
        "2843                    Fight Club      9678.0           8.3  8.256385"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,8 +1061,7 @@
     "        idx = q_movies.loc[q_movies['title'] == title, 'Idx'].values[0]\n",
     "    except:\n",
     "        return \"Movie not found\"\n",
-    "    if idx > 14999:\n",
-    "        return \"Movie not found\"\n",
+    "    \n",
     "    # Get the pairwsie similarity scores of all movies with that movie\n",
     "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
     "\n",
@@ -1067,52 +1075,30 @@
     "    movie_indices = [i[0] for i in sim_scores]\n",
     "\n",
     "    # Return the top 10 most similar movies\n",
-    "    return q_movies['title'].iloc[movie_indices]"
+    "    return q_movies['title'].iloc[movie_indices].values"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 31,
-=======
-   "execution_count": 30,
->>>>>>> b5a387d5d72e24e2277f7897c7c230281aeee7e9
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "2290                         First Blood\n",
-       "2291                           Rambo III\n",
-       "2289          Rambo: First Blood Part II\n",
-       "2693                   Universal Soldier\n",
-       "9632     Strawberries in the Supermarket\n",
-       "3832                          Billy Jack\n",
-       "1165                      Apocalypse Now\n",
-       "10030                         The Search\n",
-       "12252              Journey from the Fall\n",
-       "109                          Taxi Driver\n",
-       "Name: title, dtype: object"
+       "array(['First Blood', 'Rambo III', 'Rambo: First Blood Part II',\n",
+       "       'Universal Soldier', 'Strawberries in the Supermarket',\n",
+       "       'Billy Jack', 'Apocalypse Now', 'The Search',\n",
+       "       'Journey from the Fall', 'Taxi Driver'], dtype=object)"
       ]
      },
-     "execution_count": 31,
-=======
-       "'Movie not found'"
-      ]
-     },
-     "execution_count": 30,
->>>>>>> b5a387d5d72e24e2277f7897c7c230281aeee7e9
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-<<<<<<< HEAD
     "movie = 'Rambo'\n",
-=======
-    "movie = 'Interstellar'\n",
->>>>>>> b5a387d5d72e24e2277f7897c7c230281aeee7e9
     "get_recommendations(movie)"
    ]
   },
@@ -1265,7 +1251,6 @@
    ],
    "source": [
     "reviews"
-<<<<<<< HEAD
    ]
   },
   {
@@ -1362,8 +1347,6 @@
     "for fact in facts:\n",
     "    print(fact)\n",
     "    print(\"---------------------------------------\")"
-=======
->>>>>>> b5a387d5d72e24e2277f7897c7c230281aeee7e9
    ]
   }
  ],
